# cmake

./: diff.txt
demo3_2/: CMakeCache.txt  CMakeLists.txt  Demo3  Makefile  cmake_install.cmake
demo3_2/lib_src/: CMakeLists.txt  Makefile  cmake_install.cmake
demo3_2/main_src/: main.cc
demo4/: CMakeCache.txt  CMakeLists.txt  Demo4  Makefile  cmake_install.cmake
demo4/include/: power.h
demo4/lib_src/: CMakeLists.txt  Makefile  cmake_install.cmake  power.cc
demo4/main_src/: CMakeCache.txt  main.cc
demo4_2/: CMakeCache.txt  Demo4  Makefile  cmake_install.cmake
demo4_2/lib_src/: CMakeLists.txt  Makefile  cmake_install.cmake  power.cc
demo4_2/main_src/: main.cc
demo5/: CMakeCache.txt  CMakeLists.txt  Demo4  Makefile  cmake_install.cmake
demo5/include/: power.h
demo5/lib_src/: Makefile  cJSON.cc  cmake_install.cmake
demo5/main_src/: main.cc  main.cc~
demo7/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  hello.c  main.c
demo8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
demo8/lib_src/: Makefile  cmake_install.cmake
demo8/main_src/: CMakeLists.txt  Makefile  cmake_install.cmake  helloMain
demo9/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
demo9/lib_src/: CMakeLists.txt  Makefile  cmake_install.cmake  hello.c
demo9/main_src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
demo9/math_src/: CMakeLists.txt  Makefile  cmake_install.cmake  math.c  math.h
